fix: z-index

--- a/src/UIComponents/Modal/Modal.module.scss
+++ b/src/UIComponents/Modal/Modal.module.scss
@@ -123,7 +123,7 @@
   height: 35vh;
   background-color: #fff;
   box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.1);
-  z-index: 20;
+  z-index: 4;
   overflow-y: scroll;
 
   .header {
